# ---------------------------------------------------------
# GERENTE INTERMEDIÁRIO (Índice de Atividades)
# ---------------------------------------------------------
# Cada linha abaixo manda o CMake entrar na respectiva pasta
# e ler o CMakeLists.txt que está lá dentro.

add_subdirectory(01-dados)
add_subdirectory(02-temperatura)
add_subdirectory(03-produto)
add_subdirectory(04-ponto-2d)
add_subdirectory(05-sensor)
add_subdirectory(06-tabuleiro)