# ---------------------------------------------------------
# INTERMEDIATE MANAGER (Index of Activities)
# ---------------------------------------------------------
# Each line below instructs CMake to enter the respective folder
# and read the CMakeLists.txt file located there.

add_subdirectory(01-dado)
add_subdirectory(02-temperatura)
add_subdirectory(03-produto)
add_subdirectory(04-ponto2d)
add_subdirectory(05-sensor)
add_subdirectory(06-tabuleiro)